--- a/templates/manage_medicine.html
+++ b/templates/manage_medicine.html
@@ -2,8 +2,17 @@
 
 {% block body %}
 <div style="margin-left: 260px; padding: 22px;">
+{% if is_imported %} 
+<div class="row">
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong>Congratulations</strong> Data Imported Successfully !!
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+</div>
 
-
+{% endif %}
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal"
     style="margin-left: 15px;">
