--- a/templates/automateFile.html
+++ b/templates/automateFile.html
@@ -7,7 +7,8 @@
   <div class="card" style = "margin: 70px;">
    
     <div class="card-body">
-    <h2 style "text-align: center"> Automate the Medicine </h2>
+      <a href="https://github.com/dinesh-kc/zenithpms/raw/main/~%24file_format.xlsx">==>View Format</a>
+    <h2 style "text-align: center"> Automate the Medicine  </h2>
   
       <form method="post" enctype="multipart/form-data" >
       {% csrf_token %}
