added reuiremnt file

--- a/templates/manage_medicine.html
+++ b/templates/manage_medicine.html
@@ -41,7 +41,7 @@
     <div class="card-body">
 
 
-      <table class="table">
+      <table class="table" id="tblFilter">
         <thead class="thead-light">
           <tr>
             <th scope="col">S.N</th>
